Imported a dumpster fire.
SOS

--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<html>
+  <head>
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Title</title>
+    <title>My Projects ~ Disguised_Coffee</title>
 
-    <!-- link CSS stylesheet below -->
-    
-    
-    <!-- imports JS file -->
     <script defer src="script.js"></script>
-</head>
-<body>
-    <!-- Add navbar to link all html pages. -->
-    <!-- 
-        Include at least 4 coding projects. For each project, include:
-        - Project name
-        - Link to GitHub repo
-        - Link to live site
-        - Short description of project
-        - Screenshot of project 
-    -->
-    <h1>
-      Projects
-    </h1>
-    <div>
-      <p>This is a blank template.</p>
+  </head>
+  <body>
+    <div class="about-me">
+      <!-- Removed -->
+        <div class="overlap">
+          <img class="element" src="img/49104583267-5517695e82-5k-1.png" />
+          <div class="rectangle"></div>
+          <header class="header">
+            <div class="disguised-coffee">Disguised_Coffee</div>
+            <div class="text-wrapper">About</div>
+            <div class="text-wrapper-2">Projects</div>
+            <div class="text-wrapper-3">Contacts</div>
+            <div class="dark-mode-button"><div class="text-wrapper-4">Switch UI Mode</div></div>
+          </header>
+          <div class="text-wrapper-5">My Projects</div>
+          <div class="text-wrapper-6">Project Highlights</div>
+          <div class="card-img-overlay">
+            <div class="overlay">
+              <div class="overlay-content">
+                <div class="text-wrapper-7">Card title</div>
+                <p class="this-is-a-wider-card">
+                  This is a wider card with supporting text below as a natural lead-in to additional content. This
+                  content is a little bit longer.<br />This text is supposed to specify whether or not it looks good
+                  when expanded
+                </p>
+                <p class="p">Last updated as of 11/26/23</p>
+                <div class="div-wrapper"><div class="text-wrapper-8">Go to Repository</div></div>
+              </div>
+            </div>
+          </div>
+          <div class="cardimgoverlay">
+            <div class="overlay">
+              <div class="overlay-content-2">
+                <div class="text-wrapper-9">Card title</div>
+                <p class="p">Last updated as of 11/26/23</p>
+              </div>
+            </div>
+          </div>
+          <div class="overlay-wrapper">
+            <div class="overlay">
+              <div class="overlay-content-2">
+                <div class="text-wrapper-9">Card title</div>
+                <p class="p">Last updated as of 11/26/23</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-img-overlay-2">
+            <div class="overlay">
+              <div class="overlay-content">
+                <div class="text-wrapper-7">Card title</div>
+                <p class="this-is-a-wider-card">
+                  This is a wider card with supporting text below as a natural lead-in to additional content. This
+                  content is a little bit longer.<br />This text is supposed to specify whether or not it looks good
+                  when expanded
+                </p>
+                <p class="p">Last updated as of 11/26/23</p>
+                <div class="div-wrapper"><div class="text-wrapper-8">Go to Repository</div></div>
+              </div>
+            </div>
+          </div>
+          <div class="cardimgoverlay-2">
+            <div class="overlay">
+              <div class="overlay-content-2">
+                <div class="text-wrapper-9">Card title</div>
+                <p class="p">Last updated as of 11/26/23</p>
+              </div>
+            </div>
+          </div>
+          <div class="cardimgoverlay-3">
+            <div class="overlay">
+              <div class="overlay-content-2">
+                <div class="text-wrapper-9">Card title</div>
+                <p class="p">Last updated as of 11/26/23</p>
+              </div>
+            </div>
+          </div>
+          <p class="text-wrapper-10">Hover on each to learn more</p>
+        </div>
+        <div class="bottom-navi">
+          <div class="overlap-group">
+            <img class="element-first-name" src="img/73-730477-first-name-profile-image-placeholder-png-1.png" />
+            <div class="text-wrapper-11">Website made by Disguised_Coffee</div>
+          </div>
+          <img class="img" src="img/rectangle-7.svg" />
+          <div class="home-projects">Home<br />Projects<br />Credits<br />Contacts<br />My GitHub Profile</div>
+          <div class="group">
+            <img class="github-logo" src="img/github-logo-2.png" />
+            <p class="this-website-is">
+              <span class="span">this website is hosted on github!<br /></span>
+              <span class="text-wrapper-12">learn how to do yours at </span>
+              <a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer"
+                ><span class="text-wrapper-13">https://pages.github.com/</span></a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
